--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -185,7 +185,7 @@ textarea {
   font: inherit;
 }
 html {
-  font: 112.5%/1.45em georgia, serif;
+  font: 112.5%/1.45em;
   box-sizing: border-box;
   overflow-y: scroll;
 }
@@ -199,8 +199,8 @@ html {
   box-sizing: inherit;
 }
 body {
-  color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
+  color: #4D5155;
+  font-family: sans-serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -234,8 +234,9 @@ h1 {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 2.25rem;
+  font-size: 1.5rem;
   line-height: 1.1;
+  text-transform: uppercase;
 }
 h2 {
   margin-left: 0;
@@ -245,14 +246,25 @@ h2 {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
+  margin-bottom: 0;
   color: inherit;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 1.62671rem;
+  font-size: 35px;
   line-height: 1.1;
+}
+
+@media (min-width: 768px) {
+  h1 {
+    font-size: 2.25rem;
+  }
+
+  h2 {
+    font-size: 70px;
+  }
+
 }
 h3 {
   margin-left: 0;
@@ -384,7 +396,16 @@ p {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
+  margin-bottom: .5rem;
+}
+a {
+  display: block;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
   margin-bottom: 1.45rem;
+  color: inherit;
+  text-decoration: none;
 }
 figure {
   margin-left: 0;
